# WinNUT-Rust-Client

./: .gitignore  README.md  commit_message.txt  index.html  package.json  tsconfig.json  vite.config.ts
.github/workflows/: main.yml  release.yml
scripts/: release.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  db.rs  lib.rs  main.rs
src-tauri/src/nut/: client.rs  mod.rs  models.rs  parser.rs
src/components/dashboard/: BatteryGauge.tsx  CollapsibleSection.tsx  DashboardView.tsx  LoadChart.tsx  PowerStatus.tsx  StatusCard.tsx
src/components/history/: HistoryCharts.tsx
src/components/layout/: Header.tsx
src/components/settings/: SettingsModal.tsx
src/hooks/: useNotifications.ts  useShutdownMonitor.ts  useUpdater.ts  useUpsData.ts
src/store/: upsStore.ts
src/types/: ups.ts
